# robotics_algs

./: Makefile  README.md  readme.md  setup1.bash  setup2.bash  start.sh
Classical_Labs/small/: small.stl
Map_Generator/: README.md  launch_writer.py  main.py  main.pyproject  maze.py  shape.py
Map_Generator/lirs-wct/: README.md  build.sh  dependencies.sh
Map_Generator/lirs-wct/lirs_wct_console/src/: main.cpp  script_generator.cpp
Map_Generator/lirs-wct/lirs_wct_gui/: CMakeLists.txt
Map_Generator/lirs-wct/release/: lirs_wct_console
bug_alg/: CMakeLists.txt  package.xml  setup.py
bug_alg/launch/: alg1.launch  alg2.launch  behaviors.launch  bug1.launch  bug2.launch  class1.launch  distbug.launch  visbug21.launch  visbug22.launch
bug_alg/scripts/: alg1.py  alg2.py  bug1.py  bug2.py  class1.py  distbug.py  distbug_test.py  follow_wall.py  follow_wall_left.py  go_to_point.py  go_to_point_step.py  visbug21.py  visbug22.py
